# engare

./: .gitignore  CLAUDE.md  LICENSE  README.fa.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  security.md
engare/: __init__.py  __main__.py  cli.py  core.py  crypto.py  keys.py  stego.py  video.py
tests/: test_core.py  test_crypto.py  test_integration.py  test_stego.py
